ASSERT(!m_inRemovedLastRefFunction) in Element::addShadowRoot while destroying a document https://bugs.webkit.org/show_bug.cgi?id=133450

Reviewed by Eric Carlson.

ensureUserAgentShadowRoot() is being called when a media element is removed from its document
in HTMLMediaElement::removedFrom() because Node::removedFrom() has not yet run and removed the
InDocument flag from the node.  Rather than calling configureMediaControls() at this point
just expilictly remove the media controls if present.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::parseAttribute):


Canonical link: https://commits.webkit.org/151622@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169708 268f45cc-cd09-0410-ab3c-d52691b4dbfc